# poetry-workshop

./: README.md
docs/: poetry_basics.md  poetry_docker.md  python_packaging_tools_history.md
src/poetry-demo/: Dockerfile  pyproject.toml  requirements.txt
src/poetry-demo/src/poetry_demo/: __init__.py
