[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Markus Zapke-Gründemann <markus@keimlink.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "2.1.2"

[tool.poetry.dev-dependencies]
pytest = "6.2.4"

[tool.poetry.scripts]
poetry-demo = "poetry_demo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
